# CATs-FEFU-algorithms

./: A1. Bucket sort (LETTERS ONLY).cpp  A5. Сортировка подсчетом.cpp  C1 Сбалансированное дерево  CMakeLists.txt  README.md  Задача N0. Дифтонги.cpp
A1 Bucket sort (LETTERS ONLY)/: t-anastasiia.cpp
A2 Быстрая помощь/: t-anastasiia-a2.cpp
A3 ACM Rank Table/: t-anastasiia-a3.cpp
A4 К-ая порядковая статистика/: t-anastasiia-a4.cpp
B0 Мед и справедливость/: t-anastasiia-b0.cpp
B2 Золотая середина/: t-anastasiia-b2.cpp
C3 Сравнения подстрок/: t-anastasiia-c3.cpp
D0 Двоичные последовательности/: t-anastasiia-d0.cpp
D3 Сумма с перестановкой/: t-anastasiia-d3.cpp
D4 Восстановить IP/: t-anastasiia-d4.cpp
D5 Слишком много способов/: t-anastasiia-d5.cpp
D7 Домино/: t-anastasiia-d7.cpp
E1 Блинчики/: t-anastasiia-e1.cpp
E2 Арифметическая прогрессия/: t-anastasiia-e2.cpp
F1 Сбалансированное дерево revisited/: t-anastasiia-f1.cpp
K3 Марфа Геннадьевна в столовой/: t-anastasiia-k3.cpp
N0 Дифтонги/: t-anastasiia-n0.cpp
N1 Knuth-Morris-Pratt/: t-anastasiia-n1.cpp
N2 Длинный текст и много слов/: t-anastasiia-n2.cpp
