cmake_minimum_required(VERSION 3.26)
project(cats_fefu)

set(CMAKE_CXX_STANDARD 17)

add_executable(cats_fefu
#         "A1 Bucket sort (LETTERS ONLY)/t-anastasiia.cpp"
#        "A5 Сортировка подсчетом/t-anastasiia-a5.cpp"
#        "N0 Дифтонги/t-anastasiia-n0.cpp"
#        "A1 Bucket sort (LETTERS ONLY)/t-anastasiia.cpp"
#        "N0 Дифтонги/t-anastasiia-n0.cpp"
#        "C1 Сбалансированное дерево/nania01-c1.cpp"
#        "A2 Быстрая помощь/t-anastasiia-a2.cpp"
#        "A2 Быстрая помощь/t-anastasiia-a2.cpp"
#        "A4 К-ая порядковая статистика/t-anastasiia-a4.cpp"
#        "B0 Мед и справедливость/t-anastasiia-b0.cpp"
        "D4 Восстановить IP/t-anastasiia-d4.cpp")
